# ocl-dynamic-loading-template

./: .travis.yml  CMakeLists.txt  main.cpp
include/: VectorUtils.hpp
src/: CMakeLists.txt  VectorUtils.cpp  main.cpp
test/: CMakeLists.txt  main.cpp
